# StaticLibraryDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ty/android/staticlibrarydemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ty/android/staticlibrarydemo/: MainActivity.java
app/src/main/jni/: sharedlib.c  staticlib.cpp  staticlib.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ty/android/staticlibrarydemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
